Improved styling for tables and fixed issue with tables being cropped

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -47,8 +47,8 @@ nav {
 main {
   position: fixed;
   top: 80px;
-  height: 100%;
-  display:block; overflow:auto;
+  /* height: 100%; */
+  /* display:block; overflow:auto; */
   padding-left:250px;
   position:relative;
   z-index:1;
@@ -57,7 +57,7 @@ main {
 #panelhead {
   position: fixed;
   top: 80px;
-  height: 50px;
+  height: 100px;
   background-color: white;
   width: 100%;
   z-index: 1;
@@ -65,7 +65,7 @@ main {
 
 #panelmain {
   position: relative;
-  top: 80px;
+  top: 100px;
   z-index: 0;
 }
 
