--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -1,17 +1,39 @@
 table {
-  border: 1px;
+  border: 1px solid black;
 }
 
 th {
   padding: 10px;
   text-align: left;
   font-weight: bold;
+  border: 1px solid black;
+  width: 100px;
+  background-color: #328CC1;
 }
 
 tr {
   padding: 20px;
+  border: 1px solid black;
 }
 
 td{
   padding: 10px;
+  border: 1px solid black;
+  width: 100px;
+}
+
+#plaintable table {
+  border: 0;
+}
+
+#plaintable th {
+  border: 0;
+}
+
+#plaintable tr {
+  border: 0;
+}
+
+#plaintable td {
+  border: 0;
 }
